[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/ui_panel.png" type="Texture" id=2]
[ext_resource path="res://UI/GameWinMenu.gd" type="Script" id=3]

[node name="GameWinMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -484.0
margin_bottom = -272.0
rect_min_size = Vector2( 164, 134 )
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Panel" type="NinePatchRect" parent="."]
margin_right = 164.0
margin_bottom = 153.0
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 164.0
margin_bottom = 153.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 148.0
margin_bottom = 137.0

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 35.0
text = "YOU WIN
"
align = 1

[node name="Header2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 132.0
margin_bottom = 93.0
text = "You destroyed all
the power gems!
"
align = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 97.0
margin_right = 132.0
margin_bottom = 121.0
rect_min_size = Vector2( 80, 24 )
text = "Main Menu"

[node name="DisplayDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="DisplayDelayTimer" to="." method="_on_DisplayDelayTimer_timeout"]
